--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cycler==0.10.0
 decorator==5.0.7
 Flask==1.1.2
 graphviz==0.16
+gunicorn==20.1.0
 ipykernel==5.5.4
 ipython==7.23.1
 ipython-genutils==0.2.0
@@ -30,6 +31,7 @@ Pygments==2.9.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2021.1
+pywin32==300
 pyzmq==22.0.3
 retrying==1.3.3
 scikit-learn==0.24.2
