--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ colorama==0.4.4
 cycler==0.10.0
 decorator==5.0.7
 Flask==1.1.2
+Flask-Cors==3.0.10
 graphviz==0.16
 gunicorn==20.1.0
 ipykernel==5.5.4
